<resources>
    <string name="app_name">VPS</string>
    <string name="logo_name">VPS</string>

    <!-- Error -->
    <string name="error_api_default">Ошибка сервера</string>
    <string name="error_api_break_date">Проверьте данные!</string>
    <string name="error_api_token_error">Ошибка токена</string>
    <string name="error_no_network">Отсутствует подключение к интернету</string>
    <string name="hint_access_to_network">Поехали, есть подключение к интернету</string>
    <string name="error_login_or_password">Неправильный логин или пароль.\nПопробуйте ещё раз.</string>
    <string name="error_unknown">Что-то пошло не так.\nОбратитесь к разработчику приложения.</string>

    <!-- Common -->
    <string name="no_items">No items</string>
    <string name="yes">Taip</string>
    <string name="no">Ne</string>
    <string name="logout_message">Ar tikrai norite atsijungti?</string>

    <!-- Auth -->
    <string name="auth_code_error">Permission denied or pin incorrect</string>
    <string name="auth_success">Successfully log in</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>

    <!-- Main -->
    <string name="dialog_service_message">Ar mechanizmas tikrai sugedęs?</string>
    <string name="main_no_tasks">Užduočių nėra.</string>
    <string name="main_item_mechanism">Mechanizmai</string>
    <string name="main_item_start_send_task_error">You cannot start task with active one</string>
    <string name="main_item_stop_task_without_unloading_place">You cannot stop task without unloading place</string>

    <!-- Service -->
    <string name="service_title">Mechanizmas sugedęs</string>
    <string name="service_button_stop_service">Sutvarkytas</string>

    <!-- Create Task -->
    <string name="create_task_type_label">Užduoties tipas</string>
    <string name="create_task_loading_label">Pakrovimo vieta</string>
    <string name="create_task_unloading_label">Iškrovimo vieta</string>
    <string name="create_task_good_label">Krovinys</string>
    <string name="create_task_tech_label">Technika</string>
    <string name="create_task_create_button">Sukurti</string>
    <string name="create_task_fill_error">Please fill all needed fields</string>

    <!-- Select Task -->
    <string name="select_task_save_button">Išsaugoti</string>

</resources>
