<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/keypad_width"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_1"
        style="@style/KeyPadNumStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_2"
        style="@style/KeyPadNumStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_2"
        app:layout_constraintEnd_toStartOf="@id/tv_3"
        app:layout_constraintStart_toEndOf="@id/tv_1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_3"
        style="@style/KeyPadNumStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_4"
        style="@style/KeyPadNumStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keypad_margin_row"
        android:text="@string/key_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_1" />

    <TextView
        android:id="@+id/tv_5"
        style="@style/KeyPadNumStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_5"
        app:layout_constraintEnd_toStartOf="@id/tv_3"
        app:layout_constraintStart_toEndOf="@id/tv_1"
        app:layout_constraintTop_toTopOf="@id/tv_4" />

    <TextView
        android:id="@+id/tv_6"
        style="@style/KeyPadNumStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_4" />

    <TextView
        android:id="@+id/tv_7"
        style="@style/KeyPadNumStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keypad_margin_row"
        android:text="@string/key_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_4" />

    <TextView
        android:id="@+id/tv_8"
        style="@style/KeyPadNumStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_8"
        app:layout_constraintEnd_toStartOf="@id/tv_3"
        app:layout_constraintStart_toEndOf="@id/tv_1"
        app:layout_constraintTop_toTopOf="@id/tv_7" />

    <TextView
        android:id="@+id/tv_9"
        style="@style/KeyPadNumStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_7" />

    <TextView
        android:id="@+id/tv_0"
        style="@style/KeyPadNumStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keypad_margin_row"
        android:text="@string/key_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_7" />

    <ImageView
        android:id="@+id/btn_clear"
        style="@style/ClickableBorderlessBackgroundStyle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@id/tv_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_0"
        app:tint="@color/base_color" />

</androidx.constraintlayout.widget.ConstraintLayout>
