<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="450dp"
    android:layout_height="match_parent"
    android:background="@drawable/bg_task_item">

    <TextView
        android:id="@+id/tv_task_type_label"
        style="@style/MainTaskLabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_double"
        android:layout_marginTop="20dp"
        android:text="@string/create_task_type_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_task_type"
        style="@style/MainTaskTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_double"
        android:layout_marginEnd="@dimen/default_margin_double"
        app:layout_constraintEnd_toStartOf="@id/btn_edit_not_active"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_task_type_label"
        tools:text="@string/create_task_type_label" />

    <ImageView
        android:id="@+id/btn_edit_not_active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_margin_double"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:padding="6dp"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="@id/tv_task_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_task_type_label" />

    <TextView
        android:id="@+id/tv_task_loading_label"
        style="@style/MainTaskLabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_double"
        android:layout_marginTop="20dp"
        android:text="@string/create_task_loading_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_task_type" />

    <TextView
        android:id="@+id/tv_task_loading"
        style="@style/MainTaskTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_double"
        android:layout_marginEnd="@dimen/default_margin_double"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_task_loading_label"
        tools:text="@string/create_task_loading_label" />

    <TextView
        android:id="@+id/tv_task_good_label"
        style="@style/MainTaskLabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_double"
        android:layout_marginTop="20dp"
        android:text="@string/create_task_good_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_task_loading" />

    <TextView
        android:id="@+id/tv_task_good"
        style="@style/MainTaskTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_double"
        android:layout_marginEnd="@dimen/default_margin_double"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_task_good_label"
        tools:text="@string/create_task_good_label" />

    <TextView
        android:id="@+id/tv_task_tech_label"
        style="@style/MainTaskLabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_double"
        android:layout_marginTop="20dp"
        android:text="@string/main_item_mechanism"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_task_good" />

    <TextView
        android:id="@+id/tv_task_tech"
        style="@style/MainTaskTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_double"
        android:layout_marginEnd="@dimen/default_margin_double"
        android:maxLines="3"
        app:layout_constraintEnd_toStartOf="@id/btn_edit_active"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_task_tech_label"
        tools:text="@string/create_task_tech_label" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_tech"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tv_task_tech_label,tv_task_tech" />

    <TextView
        android:id="@+id/tv_task_unloading_label"
        style="@style/MainTaskLabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_double"
        android:layout_marginTop="20dp"
        android:text="@string/create_task_unloading_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_task_tech" />

    <TextView
        android:id="@+id/tv_task_unloading"
        style="@style/MainTaskTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_double"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="@dimen/default_margin_double"
        app:layout_constraintEnd_toStartOf="@id/btn_edit_active"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_task_unloading_label"
        tools:text="@string/create_task_unloading_label" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_unloading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tv_task_unloading_label,tv_task_unloading" />

    <ImageView
        android:id="@+id/btn_edit_active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_margin_double"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:padding="6dp"
        android:src="@drawable/ic_edit"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/tv_task_unloading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_task_unloading_label"
        tools:visibility="visible" />

    <View
        android:id="@+id/v_combined_footer"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:background="@color/green"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/tv_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@id/v_combined_footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/v_combined_footer"
        tools:text="00:00:00" />

    <ImageView
        android:id="@+id/btn_start"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="@dimen/default_margin_double"
        android:layout_marginBottom="@dimen/default_margin_double"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:padding="10dp"
        android:src="@drawable/ic_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/btn_stop"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="@dimen/default_margin_double"
        android:layout_marginBottom="@dimen/default_margin_double"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:padding="10dp"
        android:src="@drawable/ic_stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
