<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_logo"
            style="@style/AppLogoTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logo_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_edit"
            style="@style/ClickableBorderlessBackgroundStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin_double"
            android:src="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider_toolbar"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/base_color"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/tv_task_type_label"
        style="@style/AddTaskLabelStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_double"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/default_margin_double"
        android:text="@string/create_task_type_label"
        app:layout_constraintEnd_toStartOf="@id/tv_task_loading_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_toolbar" />

    <TextView
        android:id="@+id/tv_task_type"
        style="@style/AddTaskTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_double"
        android:layout_marginEnd="@dimen/default_margin_double"
        app:layout_constraintEnd_toStartOf="@id/tv_task_loading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_task_type_label"
        tools:text="@string/create_task_type_label" />

    <TextView
        android:id="@+id/tv_task_loading_label"
        style="@style/AddTaskLabelStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/default_margin_double"
        android:text="@string/create_task_loading_label"
        app:layout_constraintEnd_toStartOf="@id/tv_task_good_label"
        app:layout_constraintStart_toEndOf="@id/tv_task_type_label"
        app:layout_constraintTop_toBottomOf="@id/divider_toolbar" />

    <TextView
        android:id="@+id/tv_task_loading"
        style="@style/AddTaskTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_margin_double"
        app:layout_constraintEnd_toStartOf="@id/tv_task_good"
        app:layout_constraintStart_toEndOf="@id/tv_task_type"
        app:layout_constraintTop_toBottomOf="@id/tv_task_loading_label"
        tools:text="@string/create_task_loading_label" />

    <TextView
        android:id="@+id/tv_task_good_label"
        style="@style/AddTaskLabelStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/default_margin_double"
        android:text="@string/create_task_good_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_task_loading_label"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/tv_task_good"
        style="@style/AddTaskTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="@dimen/default_margin_double"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_task_loading"
        app:layout_constraintTop_toBottomOf="@id/tv_task_good_label"
        tools:text="@string/create_task_good_label" />

    <View
        android:id="@+id/divider_data"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/base_color"
        app:layout_constraintTop_toBottomOf="@id/tv_task_type" />

    <TextView
        android:id="@+id/tv_error"
        style="@style/ErrorTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_data"
        tools:text="Klaida, mechanizmas užimtas"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/layout_timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_error"
        tools:listitem="@layout/item_work_simple" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_timer"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/green"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="00:00:00" />

        <ImageView
            android:id="@+id/btn_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_double"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:padding="10dp"
            android:src="@drawable/ic_stop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_timer"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
